# serializer version: 1
# name: test_sensor_entities[sensor.back_door_lock_rule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'schedule',
        'keep_lock',
        'keep_unlock',
        'custom',
        'lock_early',
        'lock_now',
        'reset',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.back_door_lock_rule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Lock rule',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Lock rule',
    'platform': 'unifi_access',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'door_lock_rule',
    'unique_id': 'door-002-lock_rule',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.back_door_lock_rule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Back Door Lock rule',
      'options': list([
        'schedule',
        'keep_lock',
        'keep_unlock',
        'custom',
        'lock_early',
        'lock_now',
        'reset',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.back_door_lock_rule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'keep_lock',
  })
# ---
# name: test_sensor_entities[sensor.back_door_rule_end_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.back_door_rule_end_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rule end time',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Rule end time',
    'platform': 'unifi_access',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'door_lock_rule_ended_time',
    'unique_id': 'door-002-lock_rule_ended_time',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.back_door_rule_end_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Back Door Rule end time',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.back_door_rule_end_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-11-14T22:13:20+00:00',
  })
# ---
# name: test_sensor_entities[sensor.front_door_lock_rule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'schedule',
        'keep_lock',
        'keep_unlock',
        'custom',
        'lock_early',
        'lock_now',
        'reset',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.front_door_lock_rule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Lock rule',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Lock rule',
    'platform': 'unifi_access',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'door_lock_rule',
    'unique_id': 'door-001-lock_rule',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.front_door_lock_rule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Front Door Lock rule',
      'options': list([
        'schedule',
        'keep_lock',
        'keep_unlock',
        'custom',
        'lock_early',
        'lock_now',
        'reset',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.front_door_lock_rule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'keep_lock',
  })
# ---
# name: test_sensor_entities[sensor.front_door_rule_end_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.front_door_rule_end_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rule end time',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Rule end time',
    'platform': 'unifi_access',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'door_lock_rule_ended_time',
    'unique_id': 'door-001-lock_rule_ended_time',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.front_door_rule_end_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Front Door Rule end time',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.front_door_rule_end_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-11-14T22:13:20+00:00',
  })
# ---
